<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">


    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_email_sign"
            style="@style/DescriptionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>


        <EditText
            android:id="@+id/et_password_sign"
            style="@style/DescriptionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_email_sign"
            app:layout_constraintTop_toBottomOf="@+id/et_email_sign" />

        <Button
            android:id="@+id/btn_sign"
            style="@style/myStyleBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/signin"
            app:layout_constraintEnd_toEndOf="@+id/et_password_sign"
            app:layout_constraintStart_toStartOf="@+id/et_password_sign"
            app:layout_constraintTop_toBottomOf="@+id/et_password_sign" />
    </android.support.constraint.ConstraintLayout>
</layout>