<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_email"
            style="@style/DescriptionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>


        <EditText
            android:id="@+id/et_password"
            style="@style/DescriptionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <Button
            android:id="@+id/btn_signin"
            style="@style/myStyleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/signin"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="@+id/btn_signin"></com.google.android.gms.common.SignInButton>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"

            android:layout_marginStart="4dp"
            android:gravity="center_horizontal|center_vertical"

            android:text="or"
            app:layout_constraintBottom_toBottomOf="@+id/btn_signin"
            app:layout_constraintEnd_toStartOf="@+id/btn_google"
            app:layout_constraintStart_toEndOf="@+id/btn_signin"
            app:layout_constraintTop_toTopOf="@+id/btn_signin" />

        <TextView
            android:id="@+id/tv_create"
            style="@style/DescriptionStyle"
            android:background="@drawable/round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:gravity="center_horizontal"
            android:text="@string/create_count"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>